style: cleanup unused
